--- a/style.css
+++ b/style.css
@@ -9,8 +9,12 @@ body{font-family: "Poppins", sans-serif !important;}
 /* Common CSS  */
 .color-primary{color: var(--primary-color);}
 .primary-btn{display: flex;align-items: center;justify-content: center;padding: 14px 28px;background: var(--primary-color);color: #fff;text-decoration: none;font-size: 16px;line-height: 24px;font-weight: 500;transition: all 0.3s ease-in-out;border-radius: 4px;width: fit-content;border: 0;}
+.primary-outline-btn{display: flex;align-items: center;justify-content: center;padding: 14px 28px;background: #fff;color: var(--primary-color);text-decoration: none;font-size: 16px;line-height: 24px;font-weight: 500;transition: all 0.3s ease-in-out;border-radius: 4px;width: fit-content;border: 1px solid var(--primary-color);}
+.primary-outline-btn:hover{background: var(--primary-color);color: #fff;}
+.secondary-color-btn{display: flex;align-items: center;justify-content: center;padding: 14px 28px;background: var(--dark-secondary-color);color: #fff;text-decoration: none;font-size: 16px;line-height: 24px;font-weight: 500;transition: all 0.3s ease-in-out;border-radius: 4px;width: fit-content;border: 0;}
 .secondary-btn{display: flex;align-items: center;justify-content: center;padding: 10px 34px;background: var(--primary-color);color: #fff;text-decoration: none;font-size: 16px;line-height: 24px;font-weight: 500;transition: all 0.3s ease-in-out;border-radius: 40px;width: fit-content;}
 .secondary-btn:hover{background: #000;color: #fff;}
+.secondary-color-btn:hover{background: var(--primary-color);color: #fff;}
 .primary-btn:hover{background: var(--dark-secondary-color);color: #fff;}
 .primary-btn.with-logo{gap: 0 7px;}
 .section-padding{padding: 64px 0;}
@@ -41,28 +45,39 @@ body{font-family: "Poppins", sans-serif !important;}
 
 /* Hero Section  */
 /* .main-benner-section{background: #F8F8F8;} */
+.main-benner-section{overflow: hidden;}
 .main-benner-section .text-content .heading{font-family: var(--oxyzen-font);font-weight: bolder;font-size: 38px;line-height: 52px;margin-bottom: 10px;color: #000;}
 .main-benner-section .text-content .subheading{font-size: 18px;line-height: 28px;font-weight: 600;color: var(--dark-secondary-color);margin-bottom: 25px;}
 .main-benner-section .list-div{display: flex;flex-direction: column;gap: 10px 0;}
 .main-benner-section .list-div .list-text{display: flex;gap: 0 8px;font-size: 16px;line-height: 26px;color: #000;}
 .main-benner-section .list-div .list-text .icon{padding-top: 5px;color: var(--primary-color);}
-
+.main-benner-section .carousel-control-prev, .main-benner-section .carousel-control-next{height: 50px;width: 50px;background: var(--dark-secondary-color);opacity: 1;transition: all 0.3s ease-in-out;top: 50%;transform: translate(0,-50%);}
+.main-benner-section .carousel-control-prev{left: -7%;}
+.main-benner-section .carousel-control-next{right: -7%;}
+.main-benner-section .carousel-control-prev:hover, .main-benner-section .carousel-control-next:hover{background: var(--primary-color);}
+.main-benner-section .carousel-control-next-icon,.main-benner-section .carousel-control-prev-icon{width: 24px;height: 24px;}
+.main-benner-section .right-col{justify-content: center;}
+.main-benner-section .video-tag{width: 425px;height: auto;max-height: 300px;}
 
 /* Feature Highlights Section */
 .feature-sec{background: #fff;}
 .feature-sec .feature-card{padding: 24px;border-radius: 8px;box-shadow: 0px 0px 16px 0px rgba(16,16,16,0.1);display: flex;flex-direction: column;gap: 20px;height: 100%;transition: all 0.3s ease-in-out;background: #fff;}
-/* .feature-sec .feature-card:hover{box-shadow: 0px 0px 6px 0px rgba(16,16,16,0.04);} */
 .feature-sec .feature-row{gap: 30px 0;}
 .feature-sec .icon-div{width: 75px;height: 75px;display: flex;align-items: center;justify-content: center;background: rgba(37,170,225,.1);border-radius: 8px;transition: all 0.3s ease-in-out;}
 .feature-sec .feature-card:hover .icon-div{background: var(--dark-secondary-color);}
 .feature-sec .icon-div .icon{width: 45px;}
 .feature-sec .feature-card:hover .icon-div .icon{filter: invert(94%) sepia(0%) saturate(1%) hue-rotate(46deg) brightness(111%) contrast(101%);}
-.feature-sec .text-content .heading{font-size: 18px;line-height: 26px;font-weight: 600;color: #000;text-transform: capitalize;transition: all 0.3s ease-in-out;}
+.feature-sec .text-content .heading{font-size: 18px;line-height: 26px;font-weight: 600;color: #000;text-transform: capitalize;transition: all 0.3s ease-in-out;margin-bottom: 0;}
 .feature-sec .feature-card:hover .text-content .heading{color: var(--primary-color);}
-.feature-sec .feature-card .list-div{display: flex;flex-direction: column;gap: 5px 0;margin-top: 10px;}
-.feature-sec .feature-card .list-div .list{display: flex;align-items: center;gap: 0 7px;font-size: 14px;line-height: 24px;}
-.feature-sec .feature-card .list-div .list .icon{font-size: 12px;}
+.feature-sec .feature-card .list-div{display: flex;flex-direction: column;gap: 5px 0;margin-top: 0;}
+.feature-sec .feature-card .text-content{display: flex;flex-direction: column;gap: 10px 0;}
+.feature-sec .feature-card .list-div .list{display: flex;align-items: center;gap: 0 10px;font-size: 14px;line-height: 24px;}
+.feature-sec .feature-card .list-div .list .icon{font-size: 12px;color: var(--primary-color);}
+.feature-sec .feature-card .subheading{font-size: 14px;line-height: normal;text-transform: capitalize;color: #00000060;margin-bottom: 0;font-weight: 700;}
 
+.feature-sec .nav-tabs{justify-content: center;margin-bottom: 35px;}
+.feature-sec .nav-tabs .nav-link{font-size: 18px;line-height: normal;font-weight: bold;font-family: var(--oxyzen-font);color: var(--dark-secondary-color);padding: 12px 22px;}
+.feature-sec .nav-tabs .nav-link.active{color: var(--primary-color);}
 
 .testimonials-sec{background: #fff;}
 .testimonials-row{gap: 30px 0;}
@@ -98,47 +113,56 @@ body{font-family: "Poppins", sans-serif !important;}
 .pricing-sec .price-div .perc{font-size: 22px;line-height: 24px;font-weight: 600;}
 .pricing-sec .p-text{font-size: 14px;}
 
+.price-section{background: #f8f8f8;}
+.price-section .price-row{gap: 30px 0;}
+.price-section .month-tag{font-size: 11px;padding: 4px 12px;background: #f3f3f3;border-radius: 60px;color: var(--primary-color);}
+.price-section .pricing-for-heading{font-size: 26px;line-height: 36px;font-weight: 700;color: #000;margin-bottom: 30px;}
+.price-section .cards{display: grid;grid-template-columns: repeat(2,1fr);gap: 0 15px;}
+.price-section .price-card{display: flex;flex-direction: column;gap: 20px 0;background: #fff;border-radius: 6px;border-top: 8px solid var(--dark-secondary-color);padding: 26px 14px;box-shadow: 0px 0px 16px 0px rgba(16,16,16,0.2);justify-content: space-between;}
+.price-section .price-card.for-teams{border-top-color: var(--primary-color);}
+.price-section .price-card .price-head{font-size: 20px;line-height: normal;font-weight: 600;color: #000;margin-bottom: 10px;}
+.price-section .price-card .text{font-size: 14px;line-height: 22px;color: #212529;margin-bottom: 0;}
+.price-section .price-card .price{margin-bottom: 0;font-size: 34px;line-height: normal;font-weight: 600;}
+.price-section .price-card .price .month{font-size: 14px;}
+.price-section .price-card .listing-divs{margin-top: 10px;display: flex;flex-direction: column;gap: 7px 0;}
+.price-section .price-card .listing-divs .subheading{font-size: 14px;line-height: normal;text-transform: uppercase;color: #00000060;margin-bottom: 0;}
+.price-section .price-card .listing-divs .list-div{display: flex;flex-direction: column;gap: 7px 0;}
+.price-section .price-card .listing-divs .list-div .list{display: flex;gap: 0 6px;align-items: center;font-size: 14px;line-height: 22px;}
+.price-section .price-card .listing-divs .icon{font-size: 12px;color: var(--primary-color);}
+.price-section .price-card .price-btn{margin-top: 20px;width: 100%;}
+
 .sign-up-sec{background: #fafafa;position: relative;}
 .sign-up-sec::before{content: '';background: url(images/blue-dots.png) repeat;height: 180px;position: absolute;left: 3px;top: 5px;width: 295px;z-index: 1;}
 .sign-up-sec .heading{max-width: 575px;text-align: center;font-size: 32px;line-height: normal;text-transform: capitalize;margin: auto;font-family: var(--oxyzen-font);font-weight: bolder;}
 .sign-up-sec .text-content{display: flex;flex-direction: column;gap: 30px 0;justify-content: center;align-items: center;position: relative;z-index: 11;}
 .sign-up-sec .text-content .input-div{display: flex;align-items: center;gap: 0 10px;width: 100%;justify-content: center;}
-.sign-up-sec .text-content .input-text{width: 400px;border: 1px solid #ddd;padding: 14px 18px;background: transparent;}
+.sign-up-sec .text-content .input-text{width: 400px;border: 1px solid #ddd;padding: 14px 18px;background: transparent;border-radius: 4px;}
 .sign-up-sec .text-content .input-text:focus-visible{outline: 0;border: 1px solid var(--primary-color);}
 
 /* Footer  */
+.footer{background: var(--dark-secondary-color);padding: 45px 0 0 0;overflow: hidden;}
+.footer .top-content{display: flex;align-items: center;justify-content: space-between;gap: 0 30px;margin-bottom: 40px;}
+.footer .top-content .links{display: flex;align-items: center;gap: 0 15px;}
+.footer .top-content .links .footer-link{font-size: 16px;line-height: 26px;color: #fff;text-decoration: none;font-family: var(--oxyzen-font);transition: all 0.3s ease-in-out;}
+.footer .top-content .links .footer-link:hover{color: var(--primary-color);}
+.footer .top-content .social-links{display: flex;align-items: center;gap: 0 15px;}
+.footer .top-content .social-links .footer-social-media-link{font-size: 18px;color: #fff;transition: all 0.3s ease-in-out;}
+.footer .top-content .social-links .footer-social-media-link:hover{color: var(--primary-color);}
+.footer .logo-content{display: flex;flex-direction: column;align-items: center;justify-content: center;gap: 20px 0;}
+.footer .footer-logo-img{height: 80px;}
+.footer .p-text{font-size: 14px;line-height: 22px;color: #fff;text-align: center;}
+.footer .copyright-div{padding-top: 15px;border-top: 1px solid #e2e2e27a;margin-top: 15px;}
+.footer .copyright-div .copyright-text{font-size: 14px;line-height: 24px;color: #fff;text-align: center;margin-bottom: 15px;}
 
-.footer{position: relative;}
-.footer::before{content: '';position: absolute;width: 100%;height: 100%;top: 0;right: 0;background: url(images/pattern-nobg.svg);z-index: -1;opacity: 0.8;background-repeat: no-repeat;background-position: center;background-size: cover;}
-.footer .copyright{background: var(--primary-color); padding:10px 0;}
-.footer .copyright-content{display: flex; justify-content: space-between; align-items: center; color: #FFF;font-size: 16px;font-weight: 400;line-height: 24px; margin-bottom: 0; flex-wrap: wrap;}
-.footer .copyright-content a{color: #FFF;font-size: 16px;font-weight: 400;line-height: 24px;}
-.footer .copyright-content a:hover{color: var(--third-color);}
-.footer-left-div{display: flex;padding: 25px;flex-direction: column;align-items: flex-start;gap: 15px;width: 100%;border-radius: 0px 0px 16px 16px;background: var(--dark-secondary-color);}
-.footer-logo{width: 300px; min-width: 300px;}
-.footer-logo-img{width: 100%; object-fit: contain;}
-.footer-contect-link{display: flex !important; align-items: baseline !important; justify-content: flex-start !important;gap: 10px; color: #ddd !important;font-size: 16px;font-weight: 400;line-height: 24px ;margin-bottom: 0 !important; text-decoration: none;transition: all 0.3s ease-in-out;}
-.footer-contect-link span p{margin-bottom: 0;}
-.footer .p-text-div{padding-top: 25px;}
-.footer .p-text-div .p-text{color: #000;font-size: 14px;line-height: 24px;}
-.footer-contect-link span{display: block;}
-.footer-contect-link:hover{color: #fff !important;}
-.footer-social-link{display: flex; align-items: center; justify-content: flex-start; gap: 16px;width: 100%;border-top: 1px solid #ddd;padding-top: 15px;}
-
-.footer-social-link .footer-social-media-link{font-size: 18px;color: #fff !important;display: inline-flex;align-items: center;justify-content: center;gap: 16px; transition: 0.5s;text-decoration: none !important;}
-.footer-social-link .footer-social-media-link:hover{color: var(--primary-color) !important;}
-.footer-container{padding-bottom: 25px;}
-.footer{position: relative; overflow: hidden;}
-.footer .container{position: relative; z-index: 2;}
-.footer::after{position: absolute; width: 470px; height: 345px; content: ''; right: -0px; top: -0px; background: url('../images/bg2.png') no-repeat left; background-size: contain;   opacity: 0.075; z-index: 1; transform: scaleX(-1);}
-.footer-nav{list-style: none; padding: 0; display: flex; align-items: center; justify-content: flex-start; column-gap: 15px;row-gap: 10px; margin-bottom: 0; flex-wrap: wrap;}
-.footer-nav .nav-item{padding: 0 !important;}
-.footer-nav .nav-item .nav-link{width: fit-content; color: var(--dark-secondary-color) !important;font-size: 16px;font-weight: 400 !important;line-height: 24px;text-transform: capitalize; padding: 0;}
-.footer-nav .nav-item .nav-link:hover{color: var(--primary-color) !important;}
-.footer-title{color: var(--primary-color);font-family: var(--oxyzen-font);font-size: 22px;font-weight: 600;line-height: 28px;margin-bottom: 16px;}
-.footer-link-div{display: flex; flex-direction: column; align-items: flex-start; justify-content: center; height: 100%;padding-top: 35px; }
-.footer-link-div .common-hr{border-color: rgb(255, 255, 255, 0.2); margin: 25px 0;}
-
+.meeting-request-modal .modal-content{padding: 28px 32px;}
+.meeting-request-modal .modal-header, .meeting-request-modal .modal-body{padding: 0;}
+.meeting-request-modal .modal-header{padding-bottom: 15px;margin-bottom: 15px;}
+.meeting-request-modal .modal-header .modal-title{font-size: 22px;line-height: normal;font-weight: bolder;font-family: var(--oxyzen-font);}
+.modal-header .btn-close:focus{box-shadow: none;}
+.meeting-request-modal .form-row{gap: 15px 0;justify-content: center;}
+.meeting-request-modal .form-row .form-label{font-size: 14px;line-height: 22px;color: #000;margin-bottom: 6px;}
+.meeting-request-modal .form-control{border: 1px solid #ddd;padding: 8px 12px;background: transparent;border-radius: 4px;font-size: 14px;line-height: normal;}
+.meeting-request-modal .form-control:focus{box-shadow: none;outline: 0;border: 1px solid var(--primary-color);}
 
 @media (max-width:1200px) {
     .fg-navbar .navbar-nav{gap: 0 15px;}
@@ -171,12 +195,20 @@ body{font-family: "Poppins", sans-serif !important;}
     .sign-up-sec .heading{font-size: 24px;}
     .sign-up-sec .text-content .input-text{width: 270px;background: #fafafa;}
     .sign-up-sec::before{width: 155px;}
+    
+
+    .footer .top-content{flex-wrap: wrap;gap: 20px 0;flex-direction: column;}
+
+    .main-benner-section .carousel-control-prev{left: 0%;}
+    .main-benner-section .carousel-control-next{right: 0%;}
+
+    .price-section .cards{grid-template-columns: repeat(1,1fr);gap: 15px 0;}
 }
 @media (max-width:576px) {
     .fg-navbar .navbar-brand{padding: 15px;}
     .fg-navbar .brand-logo-img{width: 175px;}
 
-    .section-padding{padding: 35px 0;}
+    .section-padding{padding: 30px 0;}
 
     .main-benner-section .main-benner-row{gap: 15px 0;}
     .main-benner-section .list-div{gap: 6px 0;}
@@ -189,15 +221,6 @@ body{font-family: "Poppins", sans-serif !important;}
     .testimonials-sec .icon-div .icon .icn{font-size: 25px;}
     .testimonials-sec .user-info .user{width: 55px;height: 55px;}
     .testimonials-sec .user-info .name{font-size: 14px;line-height: 22px;}
-
-    .footer-logo{min-width: 220px;width: 220px;}
-    .footer-left-div{padding: 18px;gap: 10px;}
-    .footer-contect-link{font-size: 14px;line-height: 24px;gap: 7px;}
-    .footer-social-link .footer-social-media-link{font-size: 16px;}
-    .footer-title{margin-bottom: 10px;font-size: 18px;}
-    .footer-container{padding-bottom: 15px;}
-    .footer .copyright-content{font-size: 14px;line-height: 22px;text-align: center;}
-    .footer-link-div{padding-top: 15px;}
     
     .action-card{padding: 20px;gap: 15px 0;}
     .action-card .heading{font-size: 22px;line-height: 32px;}
@@ -209,18 +232,41 @@ body{font-family: "Poppins", sans-serif !important;}
     .pricing-sec .text-content .heading{font-size: 20px;}
 
     .sign-up-sec .heading{font-size: 18px;line-height: 28px;}
-    .primary-btn{padding: 8px 16px;font-size: 14px;line-height: 24px;}
+    .primary-btn, .secondary-color-btn, .primary-outline-btn{padding: 8px 16px;font-size: 14px;line-height: 24px;}
     .sign-up-sec .text-content .input-text{width: 200px;padding: 8px 14px;font-size: 14px;line-height: 24px;}
     .sign-up-sec::before{display: none;}
+
+    .price-section .pricing-for-heading{font-size: 22px;line-height: 28px;margin-bottom: 25px;}
+
+    .main-benner-section .video-tag{width: 100%;}
+
+    .feature-sec .nav-tabs .nav-link{font-size: 16px;padding: 8px 18px;}
+    .feature-sec .nav-tabs{margin-bottom: 20px;}
+
+    .meeting-request-modal .modal-content{padding: 22px;}
+    .meeting-request-modal .modal-header .modal-title{font-size: 18px;}
+
 }
 @media (max-width:575px) {
     .feature-sec .icon-div{width: 60px;height: 60px;}
     .feature-sec .feature-card{padding: 18px;gap: 15px ;}
     .p-text{font-size: 14px;line-height: 22px;}
-    .feature-sec .text-content .heading{line-height: 24px;margin-bottom: 10px;}
+    .feature-sec .text-content .heading{line-height: 24px;margin-bottom: 0;}
     .feature-sec .feature-row{gap: 15px 0;}
-    .feature-sec .feature-card .list-div .list{gap: 0 5px;line-height: 24px;}
+    .feature-sec .feature-card .list-div .list{line-height: 24px;}
     .feature-sec .icon-div .icon{width: 35px;}
+
+
+    .footer .footer-logo-img{height: 60px;}
+    .footer .logo-content{gap: 15px 0;}
+    .footer .top-content{margin-bottom: 30px;}
+    .footer .top-content .links{flex-wrap: wrap;align-items: center;justify-content: center;gap: 10px 15px;}
+
+    .main-benner-section{padding-bottom: 70px;}
+    .main-benner-section .carousel-control-next, .main-benner-section .carousel-control-prev{bottom: -70px;transform: translate(0,0);top: unset;}
+    .main-benner-section .carousel-control-prev{left: unset;right: 45px;}
+    .main-benner-section .carousel-control-prev, .main-benner-section .carousel-control-next{width: 40px;height: 40px;}
+    .main-benner-section .carousel-control-next-icon, .main-benner-section .carousel-control-prev-icon{width: 18px;height: 18px;}
 }
 @media (max-width:425px) {
     .sign-up-sec .text-content .input-div{flex-wrap: wrap;flex-direction: column;gap: 15px 0;}
