--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ body{font-family: "Poppins", sans-serif !important;}
 .price-section .price-card .listing-divs .icon{font-size: 12px;color: var(--primary-color);}
 .price-section .price-card .price-btn{margin-top: 20px;width: 100%;}
 
-.sign-up-sec{background: #fafafa;position: relative;}
+.sign-up-sec{background: #fafafa;position: relative;margin-bottom: -55px;padding-bottom: 100px !important;}
 .sign-up-sec::before{content: '';background: url(images/blue-dots.png) repeat;height: 180px;position: absolute;left: 3px;top: 5px;width: 295px;z-index: 1;}
 .sign-up-sec .heading{max-width: 575px;text-align: center;font-size: 32px;line-height: normal;text-transform: capitalize;margin: auto;font-family: var(--oxyzen-font);font-weight: bolder;}
 .sign-up-sec .text-content{display: flex;flex-direction: column;gap: 30px 0;justify-content: center;align-items: center;position: relative;z-index: 11;}
@@ -146,19 +146,29 @@ body{font-family: "Poppins", sans-serif !important;}
 .sign-up-sec .text-content .input-text:focus-visible{outline: 0;border: 1px solid var(--primary-color);}
 
 /* Footer  */
-.footer{background: var(--dark-secondary-color);padding: 45px 0 0 0;overflow: hidden;}
+.footer{background: var(--dark-secondary-color);padding: 70px 0 0 0;overflow: hidden;border-top-left-radius: 60px;border-top-right-radius: 60px;position: relative;z-index: 2;}
+.footer .get-in-touch-div{display: flex;flex-direction: column;gap: 15px 0;}
+.footer .get-in-touch-div .location-div{font-size: 16px;line-height: 24px;color: #fff;}
+.footer .get-in-touch-div .contact-div{display: flex;gap: 0 7px;align-items: center;font-size: 16px;line-height: 24px;color: #fff;transition: all 0.3s ease-in-out;text-decoration: none;width: fit-content;}
+.footer .get-in-touch-div .contact-div .icon{color: var(--primary-color);}
+.footer .get-in-touch-div .contact-div:hover{color: var(--primary-color);}
 .footer .top-content{display: flex;align-items: center;justify-content: space-between;gap: 0 30px;margin-bottom: 40px;}
-.footer .top-content .links{display: flex;align-items: center;gap: 0 15px;}
-.footer .top-content .links .footer-link{font-size: 16px;line-height: 26px;color: #fff;text-decoration: none;font-family: var(--oxyzen-font);transition: all 0.3s ease-in-out;}
-.footer .top-content .links .footer-link:hover{color: var(--primary-color);}
-.footer .top-content .social-links{display: flex;align-items: center;gap: 0 15px;}
-.footer .top-content .social-links .footer-social-media-link{font-size: 18px;color: #fff;transition: all 0.3s ease-in-out;}
-.footer .top-content .social-links .footer-social-media-link:hover{color: var(--primary-color);}
-.footer .logo-content{display: flex;flex-direction: column;align-items: center;justify-content: center;gap: 20px 0;}
-.footer .footer-logo-img{height: 80px;}
-.footer .p-text{font-size: 14px;line-height: 22px;color: #fff;text-align: center;}
-.footer .copyright-div{padding-top: 15px;border-top: 1px solid #e2e2e27a;margin-top: 15px;}
-.footer .copyright-div .copyright-text{font-size: 14px;line-height: 24px;color: #fff;text-align: center;margin-bottom: 15px;}
+.footer .footer-title{font-size: 21px;line-height: 24px;color: var(--primary-color);font-family: var(--oxyzen-font);margin-bottom: 20px;font-weight: bolder;}
+.footer .left-padding{padding-left: 35px;}
+.footer .links{display: flex;align-items: flex-start;gap: 8px;flex-direction: column;}
+.footer .links .footer-link{font-size: 16px;line-height: 26px;color: #fff;text-decoration: none;transition: all 0.3s ease-in-out;}
+.footer .links .footer-link:hover{color: var(--primary-color);}
+.footer .social-links{display: flex;align-items: center;gap: 0 10px;}
+.footer .social-links .footer-social-media-link{font-size: 16px;display: flex;align-items: center;justify-content: center;;background: rgb(238, 238, 238);position: relative;color: rgb(0, 0, 0);line-height: 1;padding: 0;border-radius: 6px;text-align: center;width: 32px;height: 32px;z-index: 1;transition: all 0.3s ease 0s;text-decoration: none;}
+.footer .social-links .footer-social-media-link::before{content: "";position: absolute;z-index: -1;width: 100%;height: 100%;background-color: var(--primary-color);transition: 0.3s;transform: scale(0.1);border-radius: 6px;left: 0;top: 0;opacity: 0;}
+.footer .social-links .footer-social-media-link:hover::before{opacity: 1;transform: scale(1);}
+.footer .social-links .footer-social-media-link:hover{color: #fff;}
+.footer .logo-content{display: flex;flex-direction: column;align-items: flex-start;justify-content: left;gap: 15px 0;}
+.footer .footer-logo-img{height: 55px;}
+.footer .footer-row{gap: 30px 0;}
+.footer .p-text{font-size: 14px;line-height: 22px;color: #fff;text-align: left;}
+.footer .copyright-div{padding-top: 15px;margin-top: 15px;padding-bottom: 15px;background: #302e3b;}
+.footer .copyright-div .copyright-text{font-size: 14px;line-height: 24px;color: #fff;text-align: center;margin-bottom: 0;}
 
 .meeting-request-modal .modal-content{padding: 28px 32px;}
 .meeting-request-modal .modal-header, .meeting-request-modal .modal-body{padding: 0;}
@@ -209,6 +219,8 @@ body{font-family: "Poppins", sans-serif !important;}
     .main-benner-section .carousel-control-next{right: 0%;}
 
     .price-section .cards{grid-template-columns: repeat(1,1fr);gap: 15px 0;}
+
+    .footer .left-padding{padding-left: 15px;}
 }
 @media (max-width:576px) {
     .fg-navbar .navbar-brand{padding: 15px;}
@@ -256,6 +268,13 @@ body{font-family: "Poppins", sans-serif !important;}
     .feature-v2 .title{padding: 12px 22px;margin-bottom: 20px;border-radius: 6px;font-size: 15px;}
     .feature-v2{gap: 25px 0;}
 
+    .footer{padding: 50px 0 0 0;border-top-left-radius: 0;border-top-right-radius: 0;}
+    .footer .p-text{font-size: 12px;line-height: 18px;}
+    .footer .footer-row{gap: 25px 0;}
+    .footer .links{gap: 5px;}
+    .footer .links .footer-link, .footer .get-in-touch-div .location-div, .footer .get-in-touch-div .contact-div{font-size: 14px;line-height: 24px;}
+    .footer .social-links .footer-social-media-link{font-size: 14px;width: 28px;height: 28px;}
+    .footer .footer-title{font-size: 18px;margin-bottom: 15px;}
 }
 @media (max-width:575px) {
     .feature-sec .icon-div{width: 60px;height: 60px;}
@@ -267,7 +286,7 @@ body{font-family: "Poppins", sans-serif !important;}
     .feature-sec .icon-div .icon{width: 35px;}
 
 
-    .footer .footer-logo-img{height: 60px;}
+    .footer .footer-logo-img{height: 50px;}
     .footer .logo-content{gap: 15px 0;}
     .footer .top-content{margin-bottom: 30px;}
     .footer .top-content .links{flex-wrap: wrap;align-items: center;justify-content: center;gap: 10px 15px;}
