--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body{font-family: "Poppins", sans-serif !important;}
 
 /* v2  */
 /* .feature-sec.v2 .common-heading{align-items: flex-start;} */
-.feature-v2{display: flex;flex-direction: column;gap: 35px 0;}
+.feature-v2{display: grid;gap: 30px;grid-template-columns: repeat(2,1fr);}
 .feature-v2 .title{width: fit-content;background: rgba(37,170,225,.15);padding: 14px 28px;margin-bottom: 25px;border-radius: 6px;font-size: 18px;font-weight: bold;text-transform: uppercase;color: var(--primary-color);font-family: var(--oxyzen-font);}
 
 .testimonials-sec{background: #fff;}
@@ -221,6 +221,8 @@ body{font-family: "Poppins", sans-serif !important;}
     .price-section .cards{grid-template-columns: repeat(1,1fr);gap: 15px 0;}
 
     .footer .left-padding{padding-left: 15px;}
+
+    .feature-v2{grid-template-columns: repeat(1,1fr);}
 }
 @media (max-width:576px) {
     .fg-navbar .navbar-brand{padding: 15px;}
